Profile buttons fix, warning display fix on small screens

--- a/frontend/src/pages/Book.css
+++ b/frontend/src/pages/Book.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 316px;;
 }
 
 .user__book-cover {
